--- a/index.html
+++ b/index.html
@@ -57,24 +57,25 @@
     <p>Elegant Floral</p>
     <p>$80</p>
   </div>
+  <div class="products">
   <div class="product">
-    <img src="https://images.unsplash.com/photo-1616627982648-934f2eec0b0b?fit=crop&w=300&q=80" alt="Perfume 2">
+    <img src="https://images.unsplash.com/photo-1585386959984-a4155222c1f5?fit=crop&w=300&q=80" alt="Elegant Floral">
+    <p>Elegant Floral</p>
+    <p>$80</p>
+  </div>
+  <div class="product">
+    <img src="https://images.unsplash.com/photo-1616627982648-934f2eec0b0b?fit=crop&w=300&q=80" alt="Ocean Breeze">
     <p>Ocean Breeze</p>
     <p>$110</p>
   </div>
   <div class="product">
-    <img src="https://images.unsplash.com/photo-1611080626912-f9e73a8627af?fit=crop&w=300&q=80" alt="Perfume 3">
+    <img src="https://images.unsplash.com/photo-1611080626912-f9e73a8627af?fit=crop&w=300&q=80" alt="Woodland Scent">
     <p>Woodland Scent</p>
     <p>$95</p>
   </div>
   <div class="product">
-    <img src="https://images.unsplash.com/photo-1599941311514-5cbe5e7b2f1c?fit=crop&w=300&q=80" alt="Perfume 4">
+    <img src="https://images.unsplash.com/photo-1599941311514-5cbe5e7b2f1c?fit=crop&w=300&q=80" alt="Citrus Touch">
     <p>Citrus Touch</p>
     <p>$115</p>
   </div>
 </div>
-
-<footer>&copy; 2025 Perfumes Elegantes</footer>
-
-</body>
-</html>
