--- a/index.html
+++ b/index.html
@@ -1,81 +1,120 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Perfumes Elegantes</title>
-  <style>
-    body {
-      font-family: 'Georgia', serif;
-      background: #f7f5f2;
-      margin: 0;
-      padding: 0;
-      color: #333;
-    }
-    header {
-      padding: 20px;
-      text-align: center;
-      font-size: 2em;
-      font-weight: bold;
-    }
-    .products {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px;
-      padding: 20px;
-    }
-    .product {
-      background: #fff;
-      border-radius: 8px;
-      padding: 10px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-      width: 180px;
-    }
-    .product img {
-      width: 100%;
-      border-radius: 5px;
-    }
-    .product p {
-      margin: 5px 0;
-    }
-    footer {
-      text-align: center;
-      padding: 10px;
-      font-size: 0.8em;
-      color: #666;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Tienda de perfumes de alta calidad">
+    <title>Tienda de Perfumes</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f5f5f5;
+        }
+
+        header {
+            background-color: #3c3c3c;
+            color: white;
+            padding: 15px 0;
+            text-align: center;
+        }
+
+        header h1 {
+            margin: 0;
+        }
+
+        .container {
+            width: 80%;
+            margin: 0 auto;
+        }
+
+        .product {
+            display: flex;
+            justify-content: space-around;
+            margin: 20px 0;
+            flex-wrap: wrap;
+        }
+
+        .product-item {
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            margin: 15px;
+            width: 30%;
+            text-align: center;
+            padding: 20px;
+        }
+
+        .product-item img {
+            max-width: 100%;
+            border-radius: 8px;
+        }
+
+        .product-item h3 {
+            color: #333;
+            font-size: 18px;
+            margin: 10px 0;
+        }
+
+        .product-item p {
+            color: #777;
+            font-size: 14px;
+            margin-bottom: 20px;
+        }
+
+        .product-item .price {
+            font-size: 20px;
+            color: #e91e63;
+        }
+
+        footer {
+            background-color: #3c3c3c;
+            color: white;
+            text-align: center;
+            padding: 10px;
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
 
-<header>Perfumes Elegantes</header>
+<header>
+    <h1>Perfumería Exclusiva</h1>
+    <p>Los mejores perfumes de lujo a tu alcance</p>
+</header>
 
-<div class="products">
-  <div class="product">
-    <img src="https://images.unsplash.com/photo-1585386959984-a4155222c1f5?fit=crop&w=300&q=80" alt="Perfume 1">
-    <p>Elegant Floral</p>
-    <p>$80</p>
-  </div>
-  <div class="products">
-  <div class="product">
-    <img src="https://images.unsplash.com/photo-1585386959984-a4155222c1f5?fit=crop&w=300&q=80" alt="Elegant Floral">
-    <p>Elegant Floral</p>
-    <p>$80</p>
-  </div>
-  <div class="product">
-    <img src="https://images.unsplash.com/photo-1616627982648-934f2eec0b0b?fit=crop&w=300&q=80" alt="Ocean Breeze">
-    <p>Ocean Breeze</p>
-    <p>$110</p>
-  </div>
-  <div class="product">
-    <img src="https://images.unsplash.com/photo-1611080626912-f9e73a8627af?fit=crop&w=300&q=80" alt="Woodland Scent">
-    <p>Woodland Scent</p>
-    <p>$95</p>
-  </div>
-  <div class="product">
-    <img src="https://images.unsplash.com/photo-1599941311514-5cbe5e7b2f1c?fit=crop&w=300&q=80" alt="Citrus Touch">
-    <p>Citrus Touch</p>
-    <p>$115</p>
-  </div>
+<div class="container">
+    <div class="product">
+        <div class="product-item">
+            <img src="https://via.placeholder.com/300x400?text=Perfume+1" alt="Perfume 1">
+            <h3>Perfume Floral</h3>
+            <p>Un aroma delicado y fresco para todas las ocasiones.</p>
+            <p class="price">$50.00</p>
+        </div>
+
+        <div class="product-item">
+            <img src="https://via.placeholder.com/300x400?text=Perfume+2" alt="Perfume 2">
+            <h3>Perfume Amaderado</h3>
+            <p>Una fragancia intensa y sofisticada.</p>
+            <p class="price">$70.00</p>
+        </div>
+
+        <div class="product-item">
+            <img src="https://via.placeholder.com/300x400?text=Perfume+3" alt="Perfume 3">
+            <h3>Perfume Cítrico</h3>
+            <p>Frescura y energía en cada spray.</p>
+            <p class="price">$40.00</p>
+        </div>
+    </div>
 </div>
+
+<footer>
+    <p>&copy; 2025 Perfumería Exclusiva. Todos los derechos reservados.</p>
+</footer>
+
+</body>
+</html>
+
